<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/warnabirumuda"
    android:orientation="vertical"
    tools:context=".Main3Activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="230dp"
        android:text="@string/almost_there"
        android:textColor="@color/putih"
        android:textSize="18pt" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:text="@string/text2"
        android:textColor="@color/putih"
        android:textSize="9pt" />


    <Button
        android:id="@+id/btn_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/transparent_bg_bordered_button"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/verify"
        android:textColor="@color/putih"
        android:textSize="10pt"/>
</LinearLayout>
