<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/warnabirumuda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="171dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="136dp"
            android:layout_marginLeft="136dp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="134dp"
            android:layout_marginRight="134dp"
            android:layout_marginBottom="577dp"
            android:contentDescription="@string/logo1"
            app:srcCompat="@drawable/ic_welcome_logo" />

        <EditText
            android:id="@+id/edittext1"
            android:layout_width="374dp"
            android:layout_height="89dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="251dp"
            android:layout_marginEnd="23dp"
            android:layout_marginRight="23dp"
            android:layout_marginBottom="483dp"
            android:text="@string/username"
            android:textColor="@color/putih"
            android:textSize="9pt" />

        <EditText
            android:id="@+id/edittext2"
            android:layout_width="370dp"
            android:layout_height="81dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="343dp"
            android:layout_marginEnd="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginBottom="399dp"
            android:text="@string/password"
            android:textColor="@color/putih"
            android:textSize="9pt" />

        <Button
            android:id="@+id/Button1"
            android:layout_width="371dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="439dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="299dp"
            android:background="@drawable/transparent_bg_bordered_button"
            android:text="@string/login"
            android:textColor="@color/putih"
            android:textSize="9pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="193dp"
            android:layout_marginLeft="193dp"
            android:layout_marginEnd="193dp"
            android:layout_marginRight="193dp"
            android:layout_marginBottom="263dp"
            android:text="@string/or"
            android:textColor="@color/putih"
            android:textSize="9pt"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Button2"
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="563dp"
            android:layout_marginEnd="21dp"
            android:layout_marginRight="21dp"
            android:layout_marginBottom="179dp"
            android:background="@drawable/facebook"
            android:contentDescription="@string/facebook"
            android:drawableStart="@drawable/ic_welcome_fb_login"
            android:drawableLeft="@drawable/ic_welcome_fb_login"
            android:text="@string/connect_with_facebook"
            android:textColor="@color/putih"
            android:textSize="8pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="198dp"
            android:layout_height="49dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="89dp"
            android:layout_marginLeft="89dp"
            android:layout_marginTop="639dp"
            android:layout_marginEnd="124dp"
            android:layout_marginRight="124dp"
            android:layout_marginBottom="135dp"
            android:text="@string/doesn_t_have_account"
            android:textColor="@color/putih"
            android:textSize="7pt" />

        <TextView
            android:id="@+id/register1"
            android:layout_width="99dp"
            android:layout_height="43dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="250dp"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="640dp"
            android:layout_marginEnd="62dp"
            android:layout_marginRight="62dp"
            android:layout_marginBottom="140dp"
            android:text="@string/register1"
            android:textColor="@color/putih"
            android:textSize="7pt"
            android:textStyle="bold"/>


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>